# PyFMReader

./: .gitignore  LICENSE.txt  README.md  pyafmreader-app.py  pyafmreader_app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
examples/: BasicUsageExample.ipynb  LoadJPKImageData.ipynb  OvershootTest.ipynb  ReadJPKThermalExample.ipynb  loadQIImg.ipynb
pyafmreader/: __init__.py  constants.py  importutils.py  load_uff.py  pyafmreader.py  save_uff.py  uff.py
pyafmreader/jpk/: __init__.py  loadjpkcurve.py  loadjpkfile.py  loadjpkimg.py  loadjpkthermalfile.py  parsejpkheader.py
pyafmreader/nanosc/: loadnanosccurve.py  loadnanoscfile.py  loadnanoscimg.py  parsenanoscheader.py
pyafmreader/utils/: forcecurve.py  segment.py
pyfmreader/: __init__.py  load_uff.py
pyfmreader/jpk/: loadjpkcurve.py  loadjpkthermalfile.py  parsejpkheader.py
src/: constants.py  importutils.py  load_uff.py  pyafmreader.py  save_uff.py  uff.py
src/jpk/: loadjpkcurve.py  loadjpkfile.py  loadjpkimg.py  parsejpkheader.py
src/nanosc/: loadnanosccurve.py  loadnanoscfile.py  parsenanoscheader.py
src/pyfmreader/: __init__.py  constants.py  pyfmreader.py  save_uff.py
src/pyfmreader/jpk/: loadjpkfile.py  loadjpkimg.py
src/pyfmreader/nanosc/: __init__.py  loadnanosccurve.py  (+2 more)
tests/: testJPK.py  testNANOSC.py  test_pyafmreader.py  test_savefile.py
tests/testfiles/: 20200903_Egel2.0_00023.spm  20200904_Egel4-Z1.0_00025.spm  20200904_Egel4-Z1.0_00025.uff  PFQNM-H2O-thermal-noise-data_vDeflection_2022.01.12-11.37.51.tnd  map-data-2021.11.05-17.37.44.432.jpk-force-map
(+1 files in other folders)
